@@ -13,32 +13,14 @@ buildscript {
 }
 
 plugins {
-    id "com.moowork.node" version "1.3.1"
     id "com.palantir.docker" version "0.17.2"  // reference:  https://github.com/palantir/gradle-docker
 }
 
 project.ext {
-    aspectjVersion = '1.8.10'
+    aspectjVersion = '1.9.2'
 }
 
 
-node {
-    // Version of node to use.
-    version = nodeVersion
-
-    // Base URL for fetching node distributions (change if you have a mirror).
-    distBaseUrl = 'https://nodejs.org/dist'
-    // If true, it will download node using above parameters.
-    // If false, it will try to use globally installed node.
-
-    if (project.hasProperty('useGradleNode')){
-        download = project.useGradleNode.toBoolean()
-        println "\nUsing Gradle node version as property useGradleNode=$project.useGradleNode"
-    } else{
-        download = true
-    }
-
-}
 
 import com.dotcms.repackage.org.apache.commons.io.FileUtils;
 import groovy.json.JsonSlurper
@@ -77,6 +59,16 @@ apply plugin: 'org.unbroken-dome.test-sets'
 apply plugin: 'project-report' /*For gradle dependencies: ./gradlew htmlDependencyReport*/
 apply plugin: 'idea'
 apply plugin: 'eclipse'
+
+targetCompatibility = 1.8
+sourceCompatibility = 1.8
+
+// Compile Java.
+compileJava {
+    options.incremental = true
+    options.compilerArgs.addAll(['--release', '8'])
+}
+
 eclipse {
     project {
         name = 'dotCMS'
@@ -93,7 +85,6 @@ repositories {
 testSets {
     individualTest { dirName = 'test' }
     integrationTest { dirName = 'integration-test' }
-    functionalTest { dirName = 'functional-test' }
 }
 
 
@@ -137,7 +128,6 @@ idea {
 
         //Extra test source dirs
         testSourceDirs += file('integration-test/java')
-        testSourceDirs += file('functional-test/java')
     }
 }
 
@@ -155,10 +145,10 @@ dependencies {
     felix (group: 'org.osgi', name: 'org.osgi.compendium', version: '4.3.1') {
         transitive = false
     }
-    felix(group: 'org.apache.tika', name: 'tika-core', version: '1.17') {
+    felix(group: 'org.apache.tika', name: 'tika-core', version: '1.19') {
         transitive = false
     }
-    felix(group: 'org.apache.tika', name: 'tika-bundle', version: '1.17') {
+    felix(group: 'org.apache.tika', name: 'tika-bundle', version: '1.19') {
         transitive = false
     }
 
@@ -166,15 +156,15 @@ dependencies {
     felix group: 'org.slf4j', name: 'jcl-over-slf4j', version: '1.7.25'
     felix group: 'com.dotcms.tika', name: 'com.dotcms.tika', version: '0.2'
 
-    felix group: 'com.dotcms.samlbundle', name: 'com.dotcms.samlbundle', version: '21.02'
-    felix group: 'com.dotcms.samlbundle.fragment', name: 'com.dotcms.samlbundle.fragment', version: '21.02'
+    felix group: 'com.dotcms.samlbundle', name: 'com.dotcms.samlbundle', version: '21.04'
+    felix group: 'com.dotcms.samlbundle.fragment', name: 'com.dotcms.samlbundle.fragment', version: '21.04'
     /**** And now the libs we pull in from internal company sources - libs stored in ./plugins, ./bin, ./libs, the starter site, etc. ****/
     compile fileTree("src/main/plugins/com.dotcms.config/build/jar").include('plugin-com.dotcms.config.jar')
 
-    starter group: 'com.dotcms', name: 'starter', version: 'empty_20210113', ext: 'zip'
+    starter group: 'com.dotcms', name: 'starter', version: 'empty_20210628', ext: 'zip'
     //Uncomment this line if you want to download the starter that comes with data
-    // starter group: 'com.dotcms', name: 'starter', version: '20210106', ext: 'zip'
-    testsStarter group: 'com.dotcms', name: 'starter', version: 'empty_20210113', ext: 'zip'
+    //starter group: 'com.dotcms', name: 'starter', version: '20210628', ext: 'zip'
+    testsStarter group: 'com.dotcms', name: 'starter', version: 'empty_20210628', ext: 'zip'
 
     profiler group: 'glowroot-custom', name: 'glowroot-agent', version: '0.13.1'
     profilerDependencies group: 'glowroot-custom', name: 'collector-https-linux', version: '0.13.1'
@@ -184,8 +174,6 @@ dependencies {
 
     individualTestCompile sourceSets.test.output
     integrationTestCompile sourceSets.test.output
-    functionalTestCompile sourceSets.test.output
-    functionalTestCompile sourceSets.integrationTest.output
 
     if (project.gradle.startParameter.taskNames.contains('deployWarTomcatDev') || project.gradle.startParameter.taskNames.contains('testDev')) {
         configurations.compile.exclude group: 'com.dotcms.enterprise', module: 'ee'
@@ -277,18 +265,11 @@ if (project.hasProperty('jarBaseName')) {
 def tomcatDistBase = "$distLocation/$tomcatDistInstallLocation-$tomcatInstallVersion"
 def dotcmsDistBase = "../$tomcatDistInstallLocation-$tomcatInstallVersion"
 
-// Compile Java.
-compileJava {
-    targetCompatibility = 1.8
-    sourceCompatibility = 1.8
-    options.incremental = true
-}
-
 jar{
     exclude 'com/dotcms/enterprise/**'
 
     if (gradle.startParameter.taskNames.contains("deployWarTomcatTests")) {
-        from project.sourceSets.main.output + project.sourceSets.test.output + project.sourceSets.integrationTest.output + project.sourceSets.functionalTest.output
+        from project.sourceSets.main.output + project.sourceSets.test.output + project.sourceSets.integrationTest.output
     }
 }
 
@@ -306,7 +287,7 @@ processResources {
 
 // By default the war task compiles everything under src/main/java into WEB-INF/classes/
 // but, instead, we want to compile everything on a .jar file and put it under WEB-INF/lib.
-war.dependsOn 'deployPlugins', 'extractDotCmsArtifacts'
+war.dependsOn 'extractDotCmsArtifacts'
 
 war {
 
@@ -409,6 +390,10 @@ integrationTest {
                     systemProperty "databaseType", "$databaseType"
                 }
             }
+
+    if(JavaVersion.current() > JavaVersion.VERSION_1_8) {
+        jvmArgs '--add-opens=java.base/jdk.internal.loader=ALL-UNNAMED'
+    }
 }
 integrationTest.group='dotCMS tests'
 
@@ -442,13 +427,13 @@ task prepareFelixForTests {
 prepareFelixForTests.group='dotCMS tests'
 prepareFelixForTests.description='Copies the felix bundle jars and the osgi-extra-generated.conf file to the specified felix home location'
 
-// Delete ROOT under tomcat8/webapps
+// Delete ROOT under tomcat9/webapps
 task undeployWarTomcat(type: Delete) {
     delete tomcatInstallLocation + webAppRootFolder
     followSymlinks = true
 }
 undeployWarTomcat.group='dotCMS Util'
-undeployWarTomcat.description='Removes /tomcat8/webapps folder. (reset tomcat)'
+undeployWarTomcat.description='Removes /tomcat9/webapps folder. (reset tomcat)'
 
 undeployWarTomcat.mustRunAfter 'backupWarTomcatData'
 
@@ -503,7 +488,7 @@ task clonePullTomcat(type: ClonePullTomcatTask) {
 
 }
 clonePullTomcat.group='dotCMS Util'
-clonePullTomcat.description='Clones or pull /tomcat8 folder.'
+clonePullTomcat.description='Clones or pull /tomcat9 folder.'
 
 //Executes clonePullTomcat task from dist version
 task clonePullTomcatDist(type: ClonePullTomcatTask) {
@@ -698,7 +683,11 @@ task buildPlugins(dependsOn: 'jar') {
             from "$buildDir/libs/"
         }
 
-        def pluginsFolder = new File("src/main/plugins");
+        println project.buildDir
+        println project.buildDir
+
+//        def pluginsFolder = new File("src/main/plugins");
+        def pluginsFolder = file('src/main/plugins')
 
         if (!pluginsFolder.exists()) {
             pluginsFolder = new File("../plugins");
@@ -945,13 +934,15 @@ class ClonePullTomcatTask extends DefaultTask{
 
     @TaskAction
     def pull(){
-        def folder = new File( tomcatLocation )
+        def folder = project.file( tomcatLocation )
+
+        println folder
         if( !folder.exists() ) {
 
             try {
 
                 println "Cloning the $project.tomcatInstallRepo, branch $project.tomcatInstallBranch on $tomcatLocation";
-                org.ajoberstar.grgit.Grgit.clone(dir: "$tomcatLocation", uri: "$project.tomcatInstallRepo", refToCheckout: "$project.tomcatInstallBranch")
+                org.ajoberstar.grgit.Grgit.clone(dir: folder.absolutePath, uri: "$project.tomcatInstallRepo", refToCheckout: "$project.tomcatInstallBranch")
             } catch (Exception exception) {
                 //Do nothing, this will fail only if git is not installed on this machine
             }
@@ -1001,6 +992,7 @@ class DeployWarTomcatTask extends DefaultTask{
             from '../libs/buildlibs'
             into buildLibLocation + '/lib'
             include 'mail.jar'
+            include 'javax.activation-1.2.0.jar'
         }
 
     }
@@ -1017,8 +1009,10 @@ class NpmArtifactExtractTask extends DefaultTask {
     def extract() {
         project.mkdir(artifactFolder)
         String artifactUrl = "$url/$artifact"
-        String artifactVersion = version == 'latest'
-                ? new JsonSlurper().parse(new URL(artifactUrl))."dist-tags".latest
+        Set<String> knownTags = new HashSet<>(Arrays.asList("latest", "stable", "next", "rc"));
+
+        String artifactVersion = knownTags.contains(version)
+                ? new JsonSlurper().parse(new URL(artifactUrl))."dist-tags"[version]
                 : version
         String versionUrl = "$artifactUrl/-/$artifact-${artifactVersion}.tgz"
         println "Downloading from $versionUrl"
@@ -1098,7 +1092,6 @@ task downloadDependencies(type: Exec) {
     configurations.ajtools.files
     configurations.compileOnly.files
     configurations.default.files
-    configurations.functionalTestCompile.files
     configurations.individualTestCompile.files
     configurations.integrationTestCompile.files
     configurations.testCompile.files
